<!--
  ~ /*
  ~  Created by Sergey Stepchenkov on 02.10.20 17:10
  ~  Copyright (c) 2020. All rights reserved.
  ~  More info on www.bootcode.ru
  ~  Last modified 02.10.20 17:10
  ~  */
  -->

<resources>
    <string name="app_name">Jotter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jotter</string>
    <string name="nav_header_subtitle">snstepchenkov@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="texvview_edit_name">Name</string>
</resources>
